--- a/src/azure-cli/azure/cli/command_modules/sql/tests/latest/recordings/test_sql_mi_scheduledstartstop_mgmt.yaml
+++ b/src/azure-cli/azure/cli/command_modules/sql/tests/latest/recordings/test_sql_mi_scheduledstartstop_mgmt.yaml
@@ -27,7 +27,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 24 Jul 2023 12:55:00 GMT
+      - Mon, 24 Jul 2023 13:54:37 GMT
       expires:
       - '-1'
       pragma:
@@ -63,7 +63,7 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - -g --mi --subscription --schedule-list --description
+      - -g --mi --schedule-list --description
       User-Agent:
       - AZURECLI/2.50.0 (AAZ) azsdk-python-core/1.26.0 Python/3.8.10 (Windows-10-10.0.17763-SP0)
     method: PUT
@@ -79,7 +79,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 24 Jul 2023 12:55:01 GMT
+      - Mon, 24 Jul 2023 13:54:38 GMT
       expires:
       - '-1'
       pragma:
@@ -107,7 +107,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --mi --subscription --add
+      - -g --mi --add
       User-Agent:
       - AZURECLI/2.50.0 (AAZ) azsdk-python-core/1.26.0 Python/3.8.10 (Windows-10-10.0.17763-SP0)
     method: GET
@@ -123,7 +123,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 24 Jul 2023 12:55:02 GMT
+      - Mon, 24 Jul 2023 13:54:39 GMT
       expires:
       - '-1'
       pragma:
@@ -160,7 +160,7 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - -g --mi --subscription --add
+      - -g --mi --add
       User-Agent:
       - AZURECLI/2.50.0 (AAZ) azsdk-python-core/1.26.0 Python/3.8.10 (Windows-10-10.0.17763-SP0)
     method: PUT
@@ -176,7 +176,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 24 Jul 2023 12:55:03 GMT
+      - Mon, 24 Jul 2023 13:54:39 GMT
       expires:
       - '-1'
       pragma:
@@ -192,7 +192,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1199'
+      - '1198'
     status:
       code: 200
       message: OK
@@ -208,7 +208,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --mi --subscription --schedule-list
+      - -g --mi --schedule-list
       User-Agent:
       - AZURECLI/2.50.0 (AAZ) azsdk-python-core/1.26.0 Python/3.8.10 (Windows-10-10.0.17763-SP0)
     method: GET
@@ -224,7 +224,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 24 Jul 2023 12:55:04 GMT
+      - Mon, 24 Jul 2023 13:54:41 GMT
       expires:
       - '-1'
       pragma:
@@ -260,7 +260,7 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - -g --mi --subscription --schedule-list
+      - -g --mi --schedule-list
       User-Agent:
       - AZURECLI/2.50.0 (AAZ) azsdk-python-core/1.26.0 Python/3.8.10 (Windows-10-10.0.17763-SP0)
     method: PUT
@@ -276,7 +276,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 24 Jul 2023 12:55:05 GMT
+      - Mon, 24 Jul 2023 13:54:41 GMT
       expires:
       - '-1'
       pragma:
@@ -292,7 +292,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
-      - '1199'
+      - '1198'
     status:
       code: 200
       message: OK
@@ -308,7 +308,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --mi --subscription
+      - -g --mi
       User-Agent:
       - AZURECLI/2.50.0 (AAZ) azsdk-python-core/1.26.0 Python/3.8.10 (Windows-10-10.0.17763-SP0)
     method: GET
@@ -324,7 +324,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 24 Jul 2023 12:55:06 GMT
+      - Mon, 24 Jul 2023 13:54:43 GMT
       expires:
       - '-1'
       pragma:
@@ -354,7 +354,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - -g --mi --subscription
+      - -g --mi
       User-Agent:
       - AZURECLI/2.50.0 (AAZ) azsdk-python-core/1.26.0 Python/3.8.10 (Windows-10-10.0.17763-SP0)
     method: GET
@@ -370,7 +370,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 24 Jul 2023 12:55:07 GMT
+      - Mon, 24 Jul 2023 13:54:44 GMT
       expires:
       - '-1'
       pragma:
@@ -402,7 +402,7 @@ interactions:
       Content-Length:
       - '0'
       ParameterSetName:
-      - -g --mi --subscription --yes
+      - -g --mi --yes
       User-Agent:
       - AZURECLI/2.50.0 (AAZ) azsdk-python-core/1.26.0 Python/3.8.10 (Windows-10-10.0.17763-SP0)
     method: DELETE
@@ -416,7 +416,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Mon, 24 Jul 2023 12:55:08 GMT
+      - Mon, 24 Jul 2023 13:54:45 GMT
       expires:
       - '-1'
       pragma:
