--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -230,8 +230,8 @@ jobs:
     matrix:
       x86:
         Platform: x86
-      x64:
-        Platform: x64
+#      x64:
+#        Platform: x64
 
   dependsOn: BuildWindowsMSI
   condition: and(succeeded(), in(variables['Build.Reason'], 'IndividualCI', 'BatchedCI', 'Manual', 'Schedule'))
