--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1069,7 +1069,7 @@ jobs:
       fi
 
 - job: CodegenCoverage
-#  condition: and(succeededOrFailed(), in(variables['Build.Reason'], 'BatchedCI'))
+  condition: and(succeededOrFailed(), in(variables['Build.Reason'], 'BatchedCI'))
   displayName: "Codegen Coverage"
   pool:
     name: ${{ variables.ubuntu_pool }}
