Original code, only arguments in launch.json changed.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
-                "--help"
+                //"--help"
+                "interactive"
             ],
             "console": "integratedTerminal",
             "debugOptions": [
@@ -28,7 +29,8 @@
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
-                "--help"
+                //"--help"
+                "interactive"
             ],
             "console": "externalTerminal",
             "debugOptions": [
